apps/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Home Assistant"
    gethomepage.dev/group: "Home"
    gethomepage.dev/icon: "home-assistant.png"
    gethomepage.dev/description: "Home automation"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-ha
  hostnames:
    - ha.stevevaradi.me
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8080
